The SVG Bug in Chrome won't fuckup the styling anymore (added overflow hidden)

--- a/core/public/stylesheets/bubble.less
+++ b/core/public/stylesheets/bubble.less
@@ -241,6 +241,7 @@ ul#results-listing div.user-block {
     float: left;  
     width: 65px;
     height: 65px;
+    overflow: hidden;
     svg { 
       width: 65px;
       height: 60px;
